--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <h1>hi! how are you?</h1>
+    </main>
     <script src="js/main.js"></script>
 </body>
 </html>
