--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h1>hi! how are you?</h1>
     </main>
     <script src="js/main.js"></script>
+    <script src="js/main2.js"></script>
 </body>
 </html>
